--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
+    "prod": "next build --turbopack && next start",
     "lint": "eslint"
   },
   "dependencies": {
@@ -13,7 +14,9 @@
     "@supabase/supabase-js": "^2.56.0",
     "date-fns": "^4.1.0",
     "next": "^15.5.0",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
